# egg-engine

./: .gitmodules  CMakeLists.txt
src/: eggpch.h
src/core/: application.cc  core.h  entrypoint.h  keycodes.h  log.cc  log.h
src/events/: application_event.h  event.h  key_event.h  mouse_event.h
